--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ xcode_project: TravisTest.xcodeproj
 xcode_scheme: TravisTest
 env:
   global:
+  - KEY_PASSWORD="travis"
   - APP_NAME="TravisTest"
   - 'DEVELOPER_NAME="iPhone Distribution: Erik Villegas (4Y3DH4MJR2)"'
   - PROFILE_NAME="TravisTest_Ad_Hoc_Profile"
